# eval-dataset-smith-py

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/eval_dataset_smith/: __init__.py  dataset.py
tests/: test_dataset.py
